--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@ html, body, #map-canvas {
 #sidebar{
   width: 30%;
   float:right;
-  border-left: 5px black dotted;
-  padding-bottom: 500px;
+  /*border-left: 5px black dotted;
+  padding-bottom: 500px;*/
 }
 
 #searchPanel{
